@@ -357,6 +357,7 @@ upgrade.error.notrequired=Aucune mise \u00E0 jour n'est actuellement n\u00E9cess
 upgrade.error.oldversion=La mise \u00E0 jour vers la version {0} depuis des versions plus anciennes que {1} n''est pas support\u00E9.
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=File Description
+upload.caption.source=Fichier source
 upload.error.directorycreate=Impossible de cr\u00E9er le dossier de transfert {0}.
 upload.error.filename=Nom de fichier invalide.
 upload.error.filenotfound=Pas de nom de fichier dans l'envoi.
