@@ -402,6 +402,7 @@ upgrade.error.notrequired=Jelenleg nincs sz\u00FCks\u00E9g friss\u00EDt\u00E9sre
 upgrade.error.oldversion=A(z) {0} verzi\u00F3ra val\u00F3 friss\u00EDt\u00E9s nem lehets\u00E9ges a(z) {1} verzi\u00F3n\u00E1l r\u00E9gebbi v\u00E1ltozatokr\u00F3l.
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=A f\u00E1jl le\u00EDr\u00E1sa
+upload.caption.source=Forr\u00E1sf\u00E1jl
 upload.error.directorycreate=Nem lehet elk\u00E9sz\u00EDteni a felt\u00F6lt\u00E9si k\u00F6nyvt\u00E1rat\: {0}.
 upload.error.filename=\u00C9rv\u00E9nytelen f\u00E1jln\u00E9v.
 upload.error.filenotfound=A felt\u00F6ltend\u0151 f\u00E1jl nem l\u00E9tezik.
