@@ -381,6 +381,7 @@ upgrade.error.notrequired=Uaktualnienie nie jest potrzebne.
 upgrade.error.oldversion=Upgrading to version {0} from versions older than {1} is not supported.
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=Opis pliku
+upload.caption.source=Plik \u017Ar\u00F3d\u0142owy
 upload.error.directorycreate=Unable to create upload directory {0}.
 upload.error.filename=Niepoprawna nazwa pliku.
 upload.error.filenotfound=No file found in upload.
