@@ -355,6 +355,7 @@ upgrade.error.notrequired=\u7576\u524D\u7248\u672C\u5FC5\u9808\u7684\u6587\u4EF6
 upgrade.error.oldversion=\u4E0D\u652F\u6301\u5F9E\u7248\u672C {1} \u5347\u7D1A\u5230 {0} \u3002
 upgrade.title=Upgrade from JAMWiki {0} to JAMWiki {1}
 upload.caption.filedescription=\u6587\u4EF6\u63CF\u8FF0
+upload.caption.source=\u539F\u6587\u4EF6
 upload.error.directorycreate=\u4E0D\u80FD\u5275\u5EFA\u4E0A\u50B3\u76EE\u9304 {0}\u3002
 upload.error.filename=\u7121\u6548\u7684\u6587\u4EF6\u540D\u3002
 upload.error.filenotfound=\u6C92\u6709\u4E0A\u50B3\u6587\u4EF6\u3002
