@@ -80,9 +80,10 @@ public class UploadServlet extends JAMWikiServlet {
 	/**
 	 *
 	 */
-	private static String buildUniqueFileName(String fileName) {
-		if (StringUtils.isBlank(fileName)) {
-			return null;
+	private static String buildUploadUrl(String filename) throws WikiException {
+		String url = filename;
+		if (StringUtils.isBlank(url)) {
+			throw new WikiException(new WikiMessage("upload.error.filename"));
 		}
 		// file is appended with a timestamp of DDHHMMSS
 		GregorianCalendar cal = new GregorianCalendar();
@@ -103,13 +104,15 @@ public class UploadServlet extends JAMWikiServlet {
 			second = "0" + second;
 		}
 		String suffix = "-" + day + hour + minute + second;
-		int pos = fileName.lastIndexOf('.');
-		if (pos == -1) {
-			fileName = fileName + suffix;
-		} else {
-			fileName = fileName.substring(0, pos) + suffix + fileName.substring(pos);
+		int pos = url.lastIndexOf('.');
+		url = (pos == -1) ? url + suffix : url.substring(0, pos) + suffix + url.substring(pos);
+		// now pre-pend the file system directory
+		String subdirectory = UploadServlet.buildFileSubdirectory();
+		File directory = new File(Environment.getValue(Environment.PROP_FILE_DIR_FULL_PATH), subdirectory);
+		if (!directory.exists() && !directory.mkdirs()) {
+			throw new WikiException(new WikiMessage("upload.error.directorycreate", directory.getAbsolutePath()));
 		}
-		return fileName;
+		return url;
 	}
 
 	/**
@@ -176,12 +179,14 @@ public class UploadServlet extends JAMWikiServlet {
 			throw new WikiException(new WikiMessage("upload.error.nodirectory"));
 		}
 		Iterator iterator = ServletUtil.processMultipartRequest(request, Environment.getValue(Environment.PROP_FILE_DIR_FULL_PATH), Environment.getLongValue(Environment.PROP_FILE_MAX_FILE_SIZE));
-		String fileName = null;
+		String filename = null;
+		String destinationFilename = null;
 		String url = null;
 		String contentType = null;
 		long fileSize = 0;
 		String contents = null;
 		boolean isImage = true;
+		File uploadedFile = null;
 		while (iterator.hasNext()) {
 			FileItem item = (FileItem)iterator.next();
 			String fieldName = item.getFieldName();
@@ -189,38 +194,53 @@ public class UploadServlet extends JAMWikiServlet {
 				if (fieldName.equals("description")) {
 					// FIXME - these should be parsed
 					contents = item.getString("UTF-8");
+				} else if (fieldName.equals("destination")) {
+					destinationFilename = item.getString("UTF-8");
 				}
-			} else {
-				// file name can have encoding issues, so manually convert
-				fileName = item.getName();
-				if (fileName == null) {
-					throw new WikiException(new WikiMessage("upload.error.filename"));
-				}
-				fileName = UploadServlet.sanitizeFilename(fileName);
-				String extension = FilenameUtils.getExtension(fileName);
-				if (!isFileTypeAllowed(extension)) {
-					throw new WikiException(new WikiMessage("upload.error.filetype", extension));
-				}
-				url = UploadServlet.buildUniqueFileName(fileName);
-				String subdirectory = UploadServlet.buildFileSubdirectory();
-				fileSize = item.getSize();
-				File directory = new File(Environment.getValue(Environment.PROP_FILE_DIR_FULL_PATH), subdirectory);
-				if (!directory.exists() && !directory.mkdirs()) {
-					throw new WikiException(new WikiMessage("upload.error.directorycreate", directory.getAbsolutePath()));
-				}
-				contentType = item.getContentType();
-				url = subdirectory + "/" + url;
-				File uploadedFile = new File(Environment.getValue(Environment.PROP_FILE_DIR_FULL_PATH), url);
-				item.write(uploadedFile);
-				isImage = ImageUtil.isImage(uploadedFile);
+				continue;
 			}
+			// file name can have encoding issues, so manually convert
+			filename = item.getName();
+			if (filename == null) {
+				throw new WikiException(new WikiMessage("upload.error.filename"));
+			}
+			filename = UploadServlet.sanitizeFilename(filename);
+			String extension = FilenameUtils.getExtension(filename);
+			if (!isFileTypeAllowed(extension)) {
+				throw new WikiException(new WikiMessage("upload.error.filetype", extension));
+			}
+			url = UploadServlet.buildUploadUrl(filename);
+			fileSize = item.getSize();
+			contentType = item.getContentType();
+			uploadedFile = new File(Environment.getValue(Environment.PROP_FILE_DIR_FULL_PATH), url);
+			item.write(uploadedFile);
+			isImage = ImageUtil.isImage(uploadedFile);
+		}
+		if (uploadedFile == null) {
+			throw new WikiException(new WikiMessage("upload.error.filenotfound"));
 		}
 		String virtualWiki = pageInfo.getVirtualWikiName();
-		String topicName = NamespaceHandler.NAMESPACE_IMAGE + NamespaceHandler.NAMESPACE_SEPARATOR + Utilities.decodeAndEscapeTopicName(fileName, true);
+		String topicName = NamespaceHandler.NAMESPACE_IMAGE + NamespaceHandler.NAMESPACE_SEPARATOR;
+		if (!StringUtils.isEmpty(destinationFilename)) {
+			if (!StringUtils.isBlank(FilenameUtils.getExtension(filename)) && StringUtils.isBlank(FilenameUtils.getExtension(destinationFilename))) {
+				// if original has an extension, the renamed version must as well
+				destinationFilename += (!destinationFilename.endsWith(".") ? "." : "") + FilenameUtils.getExtension(filename);
+			}
+		}
+		topicName += Utilities.decodeAndEscapeTopicName((!StringUtils.isEmpty(destinationFilename) ? destinationFilename : filename), true);
 		if (this.handleSpam(request, next, pageInfo, topicName, contents)) {
-			// FIXME - the uploaded content should be deleted
+			// delete the spam file
+			uploadedFile.delete();
 			this.view(request, next, pageInfo);
 			return;
+		}
+		if (!StringUtils.isEmpty(destinationFilename)) {
+			filename = UploadServlet.sanitizeFilename(destinationFilename);
+			url = UploadServlet.buildUploadUrl(filename);
+			File renamedFile = new File(Environment.getValue(Environment.PROP_FILE_DIR_FULL_PATH), url);
+			if (!uploadedFile.renameTo(renamedFile)) {
+				throw new WikiException(new WikiMessage("upload.error.filerename", destinationFilename));
+			}
 		}
 		Topic topic = WikiBase.getDataHandler().lookupTopic(virtualWiki, topicName, false, null);
 		int charactersChanged = 0;
@@ -246,15 +266,12 @@ public class UploadServlet extends JAMWikiServlet {
 		}
 		wikiFileVersion.setAuthorId(authorId);
 		TopicVersion topicVersion = new TopicVersion(user, ServletUtil.getIpAddress(request), contents, topic.getTopicContent(), charactersChanged);
-		if (fileName == null) {
-			throw new WikiException(new WikiMessage("upload.error.filenotfound"));
-		}
 		WikiFile wikiFile = WikiBase.getDataHandler().lookupWikiFile(virtualWiki, topicName);
 		if (wikiFile == null) {
 			wikiFile = new WikiFile();
 			wikiFile.setVirtualWiki(virtualWiki);
 		}
-		wikiFile.setFileName(fileName);
+		wikiFile.setFileName(filename);
 		wikiFile.setUrl(url);
 		wikiFileVersion.setUrl(url);
 		wikiFileVersion.setMimeType(contentType);
