@@ -8,6 +8,8 @@ New Features:
     view of the current edit.
   * Add diff highlighting for the portion of the line that changed (if any),
     similar to Mediawiki.
+  * Allow an alternate file name to be specified as the "Destination Filename"
+    when uploading, similar to Mediawiki.
   * Implement caching for diffs and topic versions to speed up page rendering.
   * Upgrade to JFlex 1.4.3.
   * Upgrade to JSTL standard taglib 1.1.2.
